updated cGPT-prompting and cGPT-prompting-TF columns to NAND, NOR, and Positive AND. Updates systems call to only return single values or true or false

--- a/cGPT-prompting-TF.ipynb
+++ b/cGPT-prompting-TF.ipynb
@@ -56,9 +56,9 @@
    ],
    "source": [
     "# CSV path (change accordingly)\n",
-    "csv_path = \"test.csv\" \n",
+    "csv_path = \"test_TF.csv\" \n",
     "prompts = []\n",
-    "fields = ['Instructions', 'Condition', 'Study', 'Proposition', 'A', 'B']  # Columns used in CSV\n",
+    "fields = ['Instructions', 'Condition', 'Study', 'Proposition', 'NAND', 'NOR']  # Columns used in CSV\n",
     "\n",
     "# Reading CSV to dataframe\n",
     "prompts_df = pd.read_csv(csv_path, usecols=fields)\n",
@@ -66,10 +66,10 @@
     "for _, row in prompts_df.iterrows():\n",
     "    prompt = {}\n",
     "\n",
-    "    # Check if either \"A\" or \"B\" or \"C\" exists in the row\n",
-    "    choices = {\"A\":row[\"A\"], \"B\":row[\"B\"]}\n",
+    "    # Check if either \"A\" or \"B\" exists in the row\n",
+    "    choices = {\"NAND\":row[\"NAND\"], \"NOR\":row[\"NOR\"]}\n",
     "    \n",
-    "    text_parts = [row['Instructions'], row['Proposition'], \"A:\", row[\"A\"], \"B:\",row[\"B\"]]\n",
+    "    text_parts = [row['Instructions'], row['Proposition'], \"A:\", row[\"NAND\"], \"B:\",row[\"NOR\"]]\n",
     "    \n",
     "    # Filter out empty strings before joining\n",
     "    prompt[\"text\"] = ' '.join(filter(None, text_parts))\n",
