added code to Rmd file

--- a/LLM_logic_analysis.Rmd
+++ b/LLM_logic_analysis.Rmd
@@ -9,4 +9,29 @@ output: word_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+library(tidyverse)
+```
+
+```{r}
+library(readr)
+dataset <- read_csv("output_responses_1-7.csv")
+```
+```{r}
+dataset <- dataset %>% 
+  filter(Condition != "Control")
+
+avg_responses = dataset %>%
+  group_by(Continuation, Condition) %>%
+  summarise(avg_response = mean(Response))
+
+avg_responses$Condition <- factor(avg_responses$Condition, levels = c("Experimental_N", "Experimental_W", "Experimental_O"), labels = c("Negation", "Without", "Other"))
+
+ggplot(avg_responses, aes(x = Condition, y = avg_response, fill = Continuation)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Average Response by Condition and Continuation",
+       x = "Condition",
+       y = "Average Response") +
+  theme_minimal()
+```
 
