added error bars to graphs

--- a/LLM_logic_analysis.Rmd
+++ b/LLM_logic_analysis.Rmd
@@ -17,30 +17,44 @@ dataset <- read_csv("output_responses_1-7.csv")
 ```
 
 ```{r}
+# preparing dataframe
 # removing controls from dataset
-dataset <- dataset %>% 
+dataset = dataset %>% 
   filter(Condition != "Control")
 
+# renaming values 
+dataset$Condition = factor(dataset$Condition, levels = c("Experimental_N", "Experimental_W", "Experimental_O"), labels = c("Negation", "Without", "Other"))
+```
+
+```{r}
+# bar plot with created and original study prompts combined
 # finding average responses for each grouping of variables
 avg_responses = dataset %>%
-  group_by(Continuation, Condition, Study) %>%
-  summarise(avg_response = mean(Response))
+  group_by(Continuation, Condition) %>%
+  summarise(avg_response = mean(Response), sd = sd(Response, na.rm = TRUE))
 
-# renaming values 
-avg_responses$Condition <- factor(avg_responses$Condition, levels = c("Experimental_N", "Experimental_W", "Experimental_O"), labels = c("Negation", "Without", "Other"))
-
-# plotting with created and original study prompts combined
+# plotting 
 ggplot(avg_responses, aes(x = Condition, y = avg_response, fill = Continuation)) +
   geom_bar(stat = "identity", position = "dodge") +
+  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd), na.rm = TRUE, position = position_dodge(0.9), width = 0.2) + 
   labs(title = "Average Response by Condition and Continuation",
        x = "Condition",
        y = "Average Response") +
   theme_minimal()
+```
 
-# plotting with separate graphs for original and created prompts
-ggplot(avg_responses, aes(x = Condition, y = avg_response, fill = Continuation)) +
+```{r}
+# bar plot with separate graphs for original and created prompts
+# finding average responses for each grouping of variables including study
+avg_responses_S = dataset %>%
+  group_by(Continuation, Condition, Study) %>%
+  summarise(avg_response = mean(Response), sd = sd(Response, na.rm = TRUE))
+
+# plotting
+ggplot(avg_responses_S, aes(x = Condition, y = avg_response, fill = Continuation)) +
   geom_bar(stat = "identity", position = "dodge") +
   facet_wrap(~ Study) +
+  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd), na.rm = TRUE, position = position_dodge(0.9), width = 0.2) + 
   labs(title = "Average Response by Condition and Continuation, separated by study",
        x = "Condition",
        y = "Average Response") +
