added col info to contradictory prompting code

--- a/code/cGPT-prompting-C.ipynb
+++ b/code/cGPT-prompting-C.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     "    prompt[\"text\"] = ' '.join(filter(None, text_parts))\n",
     "    prompt[\"condition\"] = row['Condition']\n",
     "    prompt[\"study\"] = row['Study']\n",
-    "    prompt[\"contradictary cont.\"] = contradictory_label\n",
+    "    prompt[\"contrar\"] = contradictory_label\n",
     "    \n",
     "    prompts.append(prompt)\n",
     "\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +145,7 @@
     "df = pd.DataFrame({\"Prompt\": [prompt[\"text\"] for prompt in prompts],  \n",
     "                   \"Condition\": [prompt[\"condition\"] for prompt in prompts],\n",
     "                   \"Study\": [prompt[\"study\"] for prompt in prompts],\n",
+    "                   \"Contradictory_cont.\": [prompt[\"contrar\"] for prompt in prompts],\n",
     "                   \"Response\": outputs})\n",
     "\n",
     "# Save the DataFrame to a CSV file\n",
