updated col names of contradictory prompting code

--- a/code/cGPT-prompting-C.ipynb
+++ b/code/cGPT-prompting-C.ipynb
@@ -145,7 +145,7 @@
     "df = pd.DataFrame({\"Prompt\": [prompt[\"text\"] for prompt in prompts],  \n",
     "                   \"Condition\": [prompt[\"condition\"] for prompt in prompts],\n",
     "                   \"Study\": [prompt[\"study\"] for prompt in prompts],\n",
-    "                   \"Contradictory_cont.\": [prompt[\"contrar\"] for prompt in prompts],\n",
+    "                   \"Contradictory_cont\": [prompt[\"contrar\"] for prompt in prompts],\n",
     "                   \"Response\": outputs})\n",
     "\n",
     "# Save the DataFrame to a CSV file\n",
