--- a/code/LLM_Logic_plots.Rmd
+++ b/code/LLM_Logic_plots.Rmd
@@ -12,8 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 # importing packages and data
 library(tidyverse)
-library(readr)
-dataset <- read_csv("output_responses_1-7.csv")
+dataset <- read_csv("../data/output_responses_1-7.csv")
 ```
 
 ```{r}
@@ -58,6 +57,27 @@ ggplot(avg_responses_S, aes(x = Condition, y = avg_response, fill = Continuation
   labs(title = "Average Response by Condition and Continuation, separated by study",
        x = "Condition",
        y = "Average Response") +
+  theme_minimal()
+```
+
+```{r}
+# plotting 
+ggplot(dataset, aes(x = Condition, y = Response, fill = Continuation)) +
+  geom_dotplot(binaxis = "y", stackdir = "center", position = "dodge", dotsize=.5, binwidth = .3) +
+  labs(title = "Responses by Condition and Continuation",
+       x = "Condition",
+       y = "Response rating") +
+  theme_minimal()
+```
+
+```{r}
+# plotting
+ggplot(dataset, aes(x = Condition, y = Response, fill = Continuation)) +
+  geom_dotplot(binaxis = "y", stackdir = "center", position = "dodge", dotsize=.5, binwidth = .3) +
+  facet_wrap(~ Study) +
+  labs(title = "Responses by Condition and Continuation, separated by study",
+       x = "Condition",
+       y = "Response rating") +
   theme_minimal()
 ```
 
