updated code for control trials

--- a/code/cGPT-prompting-C.ipynb
+++ b/code/cGPT-prompting-C.ipynb
@@ -53,7 +53,7 @@
     "# CSV path (change accordingly)\n",
     "csv_path = \"test_C.csv\" \n",
     "prompts = []\n",
-    "fields = ['Instructions', 'Condition', 'Study', 'Proposition', 'NAND', 'NOR', 'Positive AND']  # Columns used in CSV\n",
+    "fields = ['Instructions', 'Condition', 'Study', 'Type', 'Proposition', 'NAND', 'NOR', 'Positive AND']  # Columns used in CSV\n",
     "\n",
     "# Reading CSV to dataframe\n",
     "prompts_df = pd.read_csv(csv_path, usecols=fields)\n",
@@ -85,6 +85,7 @@
     "    prompt[\"text\"] = ' '.join(filter(None, text_parts))\n",
     "    prompt[\"condition\"] = row['Condition']\n",
     "    prompt[\"study\"] = row['Study']\n",
+    "    prompt[\"type\"] = row['Type']\n",
     "    prompt[\"contrar\"] = contradictory_label\n",
     "    \n",
     "    prompts.append(prompt)\n",
@@ -145,6 +146,7 @@
     "df = pd.DataFrame({\"Prompt\": [prompt[\"text\"] for prompt in prompts],  \n",
     "                   \"Condition\": [prompt[\"condition\"] for prompt in prompts],\n",
     "                   \"Study\": [prompt[\"study\"] for prompt in prompts],\n",
+    "                   \"Type\": [prompt[\"type\"] for prompt in prompts],\n",
     "                   \"Contradictory_cont\": [prompt[\"contrar\"] for prompt in prompts],\n",
     "                   \"Response\": outputs})\n",
     "\n",
