added 5 trials to code

--- a/code/cGPT-prompting-C.ipynb
+++ b/code/cGPT-prompting-C.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 prompts in the given CSV file.\n"
+      "Found 15 prompts in the given CSV file.\n"
      ]
     }
    ],
@@ -55,40 +55,40 @@
     "prompts = []\n",
     "fields = ['Instructions', 'Condition', 'Study', 'Type', 'Proposition', 'NAND', 'NOR', 'Positive AND']  # Columns used in CSV\n",
     "\n",
-    "# Reading CSV to dataframe\n",
-    "prompts_df = pd.read_csv(csv_path, usecols=fields)\n",
+    "for _ in range(5):\n",
+    "    # Reading CSV to dataframe\n",
+    "    prompts_df = pd.read_csv(csv_path, usecols=fields)\n",
     "\n",
-    "for _, row in prompts_df.iterrows():\n",
-    "    prompt = {}\n",
+    "    for _, row in prompts_df.iterrows():\n",
+    "        prompt = {}\n",
     "\n",
-    "    # Check if either \"A\" or \"B\" exists in the row\n",
-    "    choices = {\"NAND\":row[\"NAND\"], \"NOR\":row[\"NOR\"], \"Contradictory\":row[\"Positive AND\"]}\n",
+    "        # Check if either \"A\" or \"B\" exists in the row\n",
+    "        choices = {\"NAND\":row[\"NAND\"], \"NOR\":row[\"NOR\"], \"Contradictory\":row[\"Positive AND\"]}\n",
+    "        \n",
+    "        text_parts = [row['Instructions'], row['Proposition']]\n",
+    "\n",
+    "        # Shuffle the keys of choices\n",
+    "        shuffled_keys = list(choices.keys())\n",
+    "        random.shuffle(shuffled_keys)\n",
+    "\n",
+    "        labels = [\"A\", \"B\", \"C\"]\n",
+    "\n",
+    "        # Iterate through shuffled keys and assign values to text_parts\n",
+    "        contradictory_index = None\n",
+    "        for label, key in zip(labels, shuffled_keys):\n",
+    "            if key == \"Contradictory\":\n",
+    "                contradictory_index = len(text_parts)\n",
+    "                contradictory_label = label\n",
+    "            text_parts.extend([label + \":\", choices[key]])\n",
     "    \n",
-    "    text_parts = [row['Instructions'], row['Proposition']]\n",
-    "\n",
-    "    \n",
-    "    # Shuffle the keys of choices\n",
-    "    shuffled_keys = list(choices.keys())\n",
-    "    random.shuffle(shuffled_keys)\n",
-    "\n",
-    "    labels = [\"A\", \"B\", \"C\"]\n",
-    "\n",
-    "    # Iterate through shuffled keys and assign values to text_parts\n",
-    "    contradictory_index = None\n",
-    "    for label, key in zip(labels, shuffled_keys):\n",
-    "        if key == \"Contradictory\":\n",
-    "            contradictory_index = len(text_parts)\n",
-    "            contradictory_label = label\n",
-    "        text_parts.extend([label + \":\", choices[key]])\n",
-    "    \n",
-    "    # Filter out empty strings before joining\n",
-    "    prompt[\"text\"] = ' '.join(filter(None, text_parts))\n",
-    "    prompt[\"condition\"] = row['Condition']\n",
-    "    prompt[\"study\"] = row['Study']\n",
-    "    prompt[\"type\"] = row['Type']\n",
-    "    prompt[\"contrar\"] = contradictory_label\n",
-    "    \n",
-    "    prompts.append(prompt)\n",
+    "        # Filter out empty strings before joining\n",
+    "        prompt[\"text\"] = ' '.join(filter(None, text_parts))\n",
+    "        prompt[\"condition\"] = row['Condition']\n",
+    "        prompt[\"study\"] = row['Study']\n",
+    "        prompt[\"type\"] = row['Type']\n",
+    "        prompt[\"contrar\"] = contradictory_label\n",
+    "        \n",
+    "        prompts.append(prompt)\n",
     "\n",
     "random.shuffle(prompts)\n",
     "\n",
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Messages generated with 821 tokens\n"
+      "Messages generated with 1455 tokens\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
