--- a/code/LLM_Logic_plots.Rmd
+++ b/code/LLM_Logic_plots.Rmd
@@ -1,38 +1,37 @@
 ---
-title: "LLM_Logic"
+title: "LLM Logic Scale Task Plots"
 author: "Carson Chiem"
 date: "2024-01-22"
 output:
-  pdf_document: default
   word_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, comment = NA)
 ```
 
 ```{r}
 # importing packages and data
 library(tidyverse)
-# dataset = read_csv("../data/output_responses_1-7.csv")
-dataset = read_csv("C:/CS_programs/Python/code/LLM_connectives/LLM_Logic/LLM_Logic-2/data/lungu_scale_updated_responses.csv")
+dataset = read_csv("C:/CS_programs/Python/LLM_Logic/data/output_responses.csv")
 ```
 
 ```{r}
 # bar plot with created and original study prompts combined
 # finding average responses for each grouping of variables
 avg_responses = dataset %>%
-  group_by(Continuation, Type) %>%
+  group_by(Continuation, Type, Condition) %>%
   summarise(avg_response = mean(Response), sd = sd(Response, na.rm = TRUE))
 
 # plotting
-ggplot(avg_responses, aes(x = Type, y = avg_response, fill = Continuation)) +
-  geom_bar(stat = "identity", position = "dodge") +
-  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd),
-                position = position_dodge(0.9), width = 0.2) +
+ggplot(avg_responses, aes(x = Type, y = avg_response)) +
+  geom_bar(aes(fill = ifelse(Condition == "Experimental", Continuation, "Control")), stat = "identity", position = "dodge") +
+  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd, fill = Continuation), position = position_dodge(0.9), width = 0.2) +
   labs(title = "Average Response by Type and Continuation",
        x = "Type",
-       y = "Average Response") +
+       y = "Average Response",
+       fill = "Continuation") +
   theme_minimal()
 ```
 
@@ -40,40 +39,49 @@ ggplot(avg_responses, aes(x = Type, y = avg_response, fill = Continuation)) +
 # bar plot with separate graphs for original and created prompts
 # finding average responses for each grouping of variables including study
 avg_responses = dataset %>%
-  group_by(Continuation, Type, Study) %>%
+  group_by(Continuation, Type, Condition, Study) %>%
   summarise(avg_response = mean(Response), sd = sd(Response, na.rm = TRUE))
 
 # plotting
-ggplot(avg_responses, aes(x = Type, y = avg_response, fill = Continuation)) +
-  geom_bar(stat = "identity", position = "dodge") +
+ggplot(avg_responses, aes(x = Type, y = avg_response)) +
+  geom_bar(aes(fill = ifelse(Condition == "Experimental", Continuation, "Control")), stat = "identity", position = "dodge") +
   facet_wrap(~ Study, drop = TRUE, scales = "free_x") +
-  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd), na.rm = TRUE, position = position_dodge(0.9), width = 0.2) + 
+  geom_errorbar(aes(ymin = avg_response - sd, ymax = avg_response + sd, fill = Continuation), na.rm = TRUE, position = position_dodge(0.9), width = 0.2) + 
   labs(title = "Average Response by Type and Continuation, separated by study",
        x = "Type",
-       y = "Average Response") +
-  theme_minimal()
+       y = "Average Response",
+       fill = "Continuation") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 ```
 
 ```{r}
 # Dot plot
 # plotting 
-ggplot(dataset, aes(x = Type, y = Response, fill = Continuation)) +
-  geom_dotplot(binaxis = "y", stackdir = "center", position = "dodge", dotsize=.3, binwidth = .3) +
+ggplot(dataset, aes(x = Type, y = Response)) +
+  geom_dotplot(aes(fill = ifelse(Condition == "Experimental", Continuation, "Control")), binaxis = "y", stackdir = "center", position = "dodge", dotsize=.2, binwidth = .1) +
   labs(title = "Responses by Type and Continuation",
        x = "Type",
-       y = "Response rating") +
+       y = "Response rating",
+       fill = "Continuation") +
   theme_minimal()
 ```
 
 ```{r}
-# Dot plot
+# Violin plot
 # plotting
-ggplot(dataset, aes(x = Type, y = Response, fill = Continuation)) +
-  geom_dotplot(binaxis = "y", stackdir = "center", position = "dodge", dotsize=.3, binwidth = .3) +
+ggplot(dataset, aes(x = Type, y = Response)) +
+  geom_violin(aes(fill = ifelse(Condition == "Experimental", Continuation, "Control")), binaxis = "y", stackdir = "center", position = "dodge", dotsize=.3, binwidth = .1, jitter = 0.2) +
   facet_wrap(~ Study, drop = TRUE, scales = "free_x") +
   labs(title = "Responses by Type and Continuation, separated by study",
        x = "Type",
-       y = "Response rating") +
-  theme_minimal()
+       y = "Response rating",
+       fill = "Continuation") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 ```
+## R Appendix
 
+```{r, ref.label=knitr::all_labels(), eval = F, echo = T}
+
+```
