--- a/code/LLM_Logic_plots_C.Rmd
+++ b/code/LLM_Logic_plots_C.Rmd
@@ -1,19 +1,18 @@
 ---
-title: "LLM_Logic_plots_C"
+title: "LLM Logic Contradiction Task Plots"
 author: "Carson Chiem"
 date: "2024-02-05"
 output: word_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, comment = NA)
 ```
 
 ```{r}
 # importing packages and data
 library(tidyverse)
-library(readr)
-dataset <- read_csv("C:/CS_programs/Python/code/LLM_connectives/LLM_Logic/LLM_Logic-2/data/contradiction_task_updated_responses.csv")
+dataset = read_csv("C:/CS_programs/Python/LLM_Logic/data/output_responses_C.csv")
 ```
 
 ```{r}
@@ -23,7 +22,6 @@ dataset <- dataset %>%
   count(Correct) %>%
   mutate(Percentage = n / sum(n)) %>%
   filter(Correct == TRUE)
-view(dataset)
 ```
 
 ```{r}
@@ -36,3 +34,8 @@ ggplot(dataset, aes(x = Condition, y = Percentage, fill = Type)) +
   theme_minimal()
 ```
 
+## R Appendix
+
+```{r, ref.label=knitr::all_labels(), eval = F, echo = T}
+
+```
