--- a/code/LLM_Logic_analyses.Rmd
+++ b/code/LLM_Logic_analyses.Rmd
@@ -12,24 +12,44 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 # importing packages and data
 library(tidyverse)
-dataset <- read_csv("../data/output_responses_1-7.csv")
+library(ordinal)
+dataset = read_csv("C:/CS_programs/Python/LLM_Logic/data/output_responses.csv")
 ```
 
 ```{r}
 # preparing dataframe
-# removing controls from dataset
-dataset = dataset %>% 
+# filtering out control trials
+df <- dataset %>%
   filter(Condition != "Control")
 
-# renaming values 
-dataset$Condition = factor(dataset$Condition, levels = c("Experimental_N", "Experimental_W", "Experimental_O"), labels = c("Negation", "Without", "Other"))
+#dataset$Continuation[dataset$Condition == "Control"] = "Control"
 ```
 
 ```{r}
-# finding average responses for each grouping of variables
-avg_responses = dataset %>%
-  group_by(Continuation, Condition) %>%
-  summarise(avg_response = mean(Response), sd = sd(Response, na.rm = TRUE))
+# perform factorial ANOVA
+anova_result <- anova(aov(Response ~ Continuation, data = df))
 
-print(avg_responses)
+print(anova_result)
 ```
+Type: The p-value associated with the "Type" variable is slightly greater than the significance level, indicating that there is no statistically significant difference in the mean responses among the different types. 
+
+Continuation: The p-value associated with the "Continuation" variable is less than the significance level, indicating that there is a statistically significant difference in the mean responses between different continuation conditions.
+
+Type:Continuation: The p-value associated with the interaction between "Type" and "Continuation" is greater than the significance level, indicating that there is no statistically significant interaction effect between these two variables.
+
+Overall, based on the p-values, we can conclude that "Continuation" has significant effects on the response variable. "Type" has no significant effects on the response, and there is no significant interaction between them as well.
+
+```{r}
+# using Cumulative Linked Mixed Model (used in original study)
+# specifying variables as factors
+df$Response = factor(df$Response)
+df$Type = factor(df$Type)
+
+# fit Cumulative Link Mixed Model
+clmm_model <- clmm(Response ~ Type * Continuation + (1|Type) + (1|Continuation), data = df)
+
+summary(clmm_model)
+```
+The NOR continuation, corresponding to the narrow scope in the original study, is a statistically significant predictor of the response variable with a p-value of 0.0127. This is not the case in the original study, where they found the "NAND"/wide scope to be the predictor. 
+
+The Type "Other DE" is also a significant predictor of the response variable.
